Download: Link to releases index

--- a/sites/www.thunderbird.net/download/index.html
+++ b/sites/www.thunderbird.net/download/index.html
@@ -83,10 +83,10 @@
             <h4>{{ _('More Information') }}</h4>
             <ul>
               <li>
-                <a class="dotted" href="https://docs.k9mail.app/en/6.400/setup/installation/">{{ _('System Requirements') }}</a>
+                <a class="dotted" href="#">{{ _('System Requirements') }}</a>
               </li>
               <li>
-                <a class="dotted" href="https://github.com/thunderbird/thunderbird-android/releases">{{ _('Release Notes') }}</a>
+                <a class="dotted" href="{{ url('thunderbird.releases.index') }}">{{ _('Release Notes') }}</a>
               </li>
             </ul>
           </div>
