General: Point careers to mozilla.org for now.

--- a/sites/www.thunderbird.net/about/index.html
+++ b/sites/www.thunderbird.net/about/index.html
@@ -122,9 +122,8 @@
       </div>
     </div>
       <div class="section-text">
-        <a class="strong" href="#">Explore Career Opportunities</a>
+        <a class="strong" href="{{ url('mozorg.careers.tb') }}">Explore Career Opportunities</a>
       </div>
-  </div>
   </div>
 </section>
 {% endblock %}
