Participate: Add mozilla connect text and link.

--- a/sites/www.thunderbird.net/participate/index.html
+++ b/sites/www.thunderbird.net/participate/index.html
@@ -67,6 +67,10 @@
       {% call accordion(svg('base/icons/participate/promote'), _('Promote')) %}
       <marquee>Awaiting copy :^)</marquee>
       {% endcall %}
+      <div class="section-text tight">
+        <p>{{ _('One more way you can contribute is by sharing <strong>ideas</strong>, <strong>priorities</strong>, and <strong>feedback</strong>. Thunderbird is yours and we\'re listening.') }}</p>
+        <a class="strong" href="{{ url('mozorg.connect.tb') }}">{{ _('Mozilla Connect') }}</a>
+      </div>
     </div>
   </div>
 </section>
