Home: Fix broken h2 styling

--- a/sites/www.thunderbird.net/index.html
+++ b/sites/www.thunderbird.net/index.html
@@ -99,7 +99,7 @@ with great features!') }}{% endblock %}
         <div class="blank-icon box-8"></div>
       </div>
       <div class="section-text">
-        <h2>{{_('<span class="txt-gradient">Freedom</span> from Chaos')}}</h2>
+        <h2 class="section-heading">{{_('<span class="txt-gradient">Freedom</span> from Chaos')}}</h2>
         <h3>{{_('Waste less time finding browser tabs.')}}</h3>
         <p>
           {% trans %}
@@ -140,7 +140,7 @@ with great features!') }}{% endblock %}
   <section id="free-from-manipulation">
     <div class="container">
       <div class="section-text">
-        <h2>{{_('<span class="txt-gradient">Freedom</span> from Manipulation')}}</h2>
+        <h2 class="section-heading">{{_('<span class="txt-gradient">Freedom</span> from Manipulation')}}</h2>
         <h3>{{_('Our agenda isn’t hidden. It’s to make the world better.')}}</h3>
         <p>
           {% trans %}
@@ -180,7 +180,7 @@ with great features!') }}{% endblock %}
   <section id="free-to-geek">
     <div class="container">
       <div class="section-text">
-        <h2>{{_('<span class="txt-gradient">Freedom</span> to Geek Out')}}</h2>
+        <h2 class="section-heading">{{_('<span class="txt-gradient">Freedom</span> to Geek Out')}}</h2>
             <h3>{{_('Thunderbird is yours.')}}</h3>
             <p>
               {% trans %}
@@ -354,7 +354,7 @@ with great features!') }}{% endblock %}
     <div class="container">
       <div class="section-text">
         <h2 class="cta-sub-heading">{{_('Are you ready to love email again?')}}</h2>
-            <h3 class="cta-heading">{{_('<span class="txt-gradient">Free</span> Your Inbox')}}</h3>
+        <h3 class="cta-heading">{{_('<span class="txt-gradient">Free</span> Your Inbox')}}</h3>
       </div>
       <div class="cta">
         <div class="os-list">
