--- a/sites/www.thunderbird.net/thunderbird/releases/index.html
+++ b/sites/www.thunderbird.net/thunderbird/releases/index.html
@@ -2,7 +2,7 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/. -#}
 
-{% set active_page = "release-notes" %}
+{% set active_page = "releases" %}
 {% extends "includes/base/page.html" %}
 
 {% block page_title %}{{ _('Releases') }}{% endblock %}
@@ -19,25 +19,25 @@
 
     <div class="section-text">
         {% for int_version, versions in releases -%}
-          <aside class="flex flex-col lg:flex-row flex-wrap items-center bg-white shadow-md mb-4 rounded">
-            <h4 class="font-2xl font-bold m-0 p-3 lg:w-24">
+          <div class="release-container">
+            <h4 class="release-major txt-gradient">
               {{ get_link(int_version, versions.major) }}
             </h4>
             {% if versions.minor -%}
-            <aside class="flex-1 p-3">
+            <div class="release-minors">
               {% for version in versions.minor -%}
                 {{ get_link(int_version, version, true) }}
               {% endfor -%}
-            </aside>
+            </div>
             {% endif -%}
-          </aside>
+          </div>
         {% endfor -%}
 
-        <aside class="flex flex-col lg:flex-row flex-wrap items-center bg-white shadow-md mb-4 rounded">
-          <h4 class="font-2xl font-bold m-0 p-3 lg:w-24">
+        <div class="release-container">
+          <h4 class="release-major txt-gradient">
             <a href="http://website-archive.mozilla.org/www.mozilla.org/thunderbird_releasenotes/en-US/thunderbird/releases/0.1.html" class="inline-link text-blue-dark font-bold no-underline">0.1</a>
           </h4>
-          <aside class="flex-1 p-3">
+          <div class="release-minors">
             <a href="http://website-archive.mozilla.org/www.mozilla.org/thunderbird_releasenotes/en-US/thunderbird/releases/0.2.html" class="inline-link text-blue-dark font-bold no-underline btn-body btn-secondary btn-release">0.2</a>
             <a href="http://website-archive.mozilla.org/www.mozilla.org/thunderbird_releasenotes/en-US/thunderbird/releases/0.3.html" class="inline-link text-blue-dark font-bold no-underline btn-body btn-secondary btn-release">0.3</a>
             <a href="http://website-archive.mozilla.org/www.mozilla.org/thunderbird_releasenotes/en-US/thunderbird/releases/0.4.html" class="inline-link text-blue-dark font-bold no-underline btn-body btn-secondary btn-release">0.4</a>
@@ -46,8 +46,8 @@
             <a href="http://website-archive.mozilla.org/www.mozilla.org/thunderbird_releasenotes/en-US/thunderbird/releases/0.7.html" class="inline-link text-blue-dark font-bold no-underline btn-body btn-secondary btn-release">0.7</a>
             <a href="http://website-archive.mozilla.org/www.mozilla.org/thunderbird_releasenotes/en-US/thunderbird/releases/0.8.html" class="inline-link text-blue-dark font-bold no-underline btn-body btn-secondary btn-release">0.8</a>
             <a href="http://website-archive.mozilla.org/www.mozilla.org/thunderbird_releasenotes/en-US/thunderbird/releases/0.9.html" class="inline-link text-blue-dark font-bold no-underline btn-body btn-secondary btn-release">0.9</a>
-          </aside>
-        </aside>
+          </div>
+        </div>
       </div>
 
   </div>
