--- a/sites/www.thunderbird.net/thunderbird/releases/index.html
+++ b/sites/www.thunderbird.net/thunderbird/releases/index.html
@@ -11,12 +11,10 @@
 
 {% block content %}
 <section>
-  <div class="container">
-
+  <div class="container container-closer">
     <div class="section-text">
       <p>{{ _('Thunderbird release notes are specific to each version of the application. Select your version from the list below to see the release notes for it. ') }}</p>
     </div>
-
     <div class="section-text">
         {% for int_version, versions in releases -%}
           <div class="release-container">
