General: Style consolidation, and a pass at making home play nicely with screenreaders.

--- a/sites/www.thunderbird.net/contact/index.html
+++ b/sites/www.thunderbird.net/contact/index.html
@@ -11,7 +11,7 @@
 
 {% block content %}
 <section>
-  <div class="container">
+  <div class="container no-gap">
     <div class="section-text">
       <h1>Need to <span class="txt-gradient">Talk?</span></h1>
       <h3>{{ _('Direct your inquiries to the people below.') }}</h3>
