--- a/sites/www.thunderbird.net/participate/index.html
+++ b/sites/www.thunderbird.net/participate/index.html
@@ -11,7 +11,7 @@
 
 {% block content %}
 <section>
-  <div class="container">
+  <div class="container no-gap">
     <div class="section-text">
       <h1>{{ _('We Need <span class="txt-gradient">You</span>') }}</h1>
       <h3>{{ _('Here are some of the ways you can help.') }}</h3>
@@ -76,14 +76,14 @@
 </section>
 {% include 'includes/components/page-separator.html' %}
 <section>
-  <div class="container">
+  <div class="container no-gap">
     <div class="section-text">
       <h1>{{ _('Contributor <span class="txt-gradient">Experience</span>') }}</h1>
       <h3>{{ _('The ways and reasons to get involved are as diverse as the people who do.') }}</h3>
       <p>{{ _('Volunteers create Thunderbird and ensure it is accessible throughout the world in dozens of languages. They write the documentation and answer the questions that help regular people use Thunderbird. They come from diverse backgrounds and bring unique talents. They\'re making Thunderbird better for themselves and better for the world at the same time. You can join them.') }}</p>
     </div>
   </div>
-  <div class="container">
+  <div class="container no-gap">
     <div class="testimonials">
       {% call testimonial_card(high_res_img('thunderbird/base/placeholder/placeholder.png', optional_attributes={'alt': _('My cat Beatrice') }, scale='2x', alt_formats=('avif', 'webp')), 'Ms Beatrice', 'Sr Meow-Stack Engineer, Canada') %}
       Meow meow meow meow...
@@ -108,7 +108,7 @@
 </section>
 {% include 'includes/components/page-separator.html' %}
 <section>
-  <div class="container">
+  <div class="container no-gap">
     <div class="two-columns">
       <div class="section-text tight">
         <h2>{{ _('Shape the <span class="txt-gradient">Future</span>') }}</h2>
