--- a/sites/www.thunderbird.net/thunderbird/releases/index.html
+++ b/sites/www.thunderbird.net/thunderbird/releases/index.html
@@ -11,7 +11,7 @@
 
 {% block content %}
 <section>
-  <div class="container container-closer">
+  <div class="container no-gap">
     <div class="section-text">
       <p>{{ _('Thunderbird release notes are specific to each version of the application. Select your version from the list below to see the release notes for it. ') }}</p>
     </div>
