All Downloads: Drop a word.

--- a/sites/www.thunderbird.net/thunderbird/all/index.html
+++ b/sites/www.thunderbird.net/thunderbird/all/index.html
@@ -18,7 +18,7 @@
           <div class="section-title">
             <h1>{{ _('Get <span class="txt-gradient">Thunderbird</span>') }}</h1>
           </div>
-          <p>{{ _('These are officially maintained and distributed by Thunderbird Desktop. Download the latest Release version unless you wish to test the Beta version and report bugs.') }}</p>
+          <p>{{ _('These are officially maintained and distributed by Thunderbird. Download the latest Release version unless you wish to test the Beta version and report bugs.') }}</p>
           <p>{{ _('The Daily version is an unstable testing and development platform, make sure you back up important data regularly!') }}</p>
         </div>
         <div class="section-text">
