All Downloads: Forgot l10n

--- a/sites/www.thunderbird.net/thunderbird/all/index.html
+++ b/sites/www.thunderbird.net/thunderbird/all/index.html
@@ -89,7 +89,7 @@
                 {{ svg(get_platform_icon(platform='win64')) }}
               </span>
               -->
-              Download
+              {{ _('Download') }}
             </a>
           </div>
         </div>
